--- a/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
@@ -14,6 +14,10 @@
   .ship { color: #fff; }
 }
 
+.btn-success {
+  color: $white;
+}
+
 .btn-sm .glyphicon { padding: 0; }
 
 .btn.action-void { @extend .btn-danger; }
