--- a/frontend/app/views/spree/shared/_cart.html.erb
+++ b/frontend/app/views/spree/shared/_cart.html.erb
@@ -1,4 +1,4 @@
-<% item_count = current_order&.item_count || 0 %>
+<% item_count = simple_current_order&.item_count || 0 %>
 
 <%= link_to spree.cart_path,
   class: "cart-icon #{'cart-icon--visible-count' if item_count > 0} #{local_assigns[:class]}",
