--- a/admin/app/views/spree/admin/themes/_theme_preview_image.html.erb
+++ b/admin/app/views/spree/admin/themes/_theme_preview_image.html.erb
@@ -2,16 +2,7 @@
 <% height ||= 72 %>
 
 <% if theme.screenshot.attached? && theme.screenshot.variable? %>
-  <%= image_tag(
-        main_app.cdn_image_url(
-          theme.screenshot.variant(
-            spree_image_variant_options(resize_to_fill: [width * 2, height * 2])
-          )
-        ),
-        class: 'img-thumbnail',
-        style: "width: #{width}px; height: #{height}px",
-        loading: :lazy
-  ) %>
+  <%= spree_image_tag(theme.screenshot, width: width, height: height, class: 'img-thumbnail', style: "width: #{width}px; height: #{height}px", loading: :lazy) %>
 <% elsif theme.class.preview_image_url.present? %>
   <%= image_tag(
   theme.class.preview_image_url,
