--- a/admin/app/views/spree/admin/posts/_post.html.erb
+++ b/admin/app/views/spree/admin/posts/_post.html.erb
@@ -3,17 +3,7 @@
     <%= link_to spree.edit_admin_post_path(post), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark gap-3', data: { row_link_target: :link, 'turbo-frame': '_top' } do %>
       <% if post.image.attached? && post.image.variable? %>
         <div class="admin-product-image-container">
-          <%= image_tag(
-                main_app.cdn_image_url(
-                  post.image.variant(
-                    spree_image_variant_options(resize_to_fill: [200, 130])
-                  )
-                ),
-                class: 'img-fluid',
-                loading: :lazy,
-                width: 100,
-                height: 65
-          ) %>
+          <%= spree_image_tag(post.image, width: 100, height: 65, class: 'img-fluid', loading: :lazy) %>
         </div>
       <% else %>
         <%= render 'spree/admin/shared/no_image', width: 100, height: 65 %>
