--- a/admin/app/views/spree/admin/shared/_product_image.html.erb
+++ b/admin/app/views/spree/admin/shared/_product_image.html.erb
@@ -5,16 +5,7 @@
 <% if image.present? && image.attached? && image.variable? %>
   <% alt ||= image.alt || object.name %>
   <div class="admin-product-image-container">
-    <%= image_tag(
-          main_app.cdn_image_url(
-            image.variant(
-              spree_image_variant_options(resize_to_fill: [width * 2, height * 2])
-            )
-          ),
-          width: width,
-          height: height,
-          alt: alt
-    ) %>
+    <%= spree_image_tag(image, width: width, height: height, alt: alt) %>
   </div>
 <% else %>
   <%= render 'spree/admin/shared/no_image', width: width, height: height %>
