--- a/core/app/views/active_storage/blobs/_blob.html.erb
+++ b/core/app/views/active_storage/blobs/_blob.html.erb
@@ -1,12 +1,6 @@
 <figure class="attachment attachment--<%= blob.representable? ? "preview" : "file" %> attachment--<%= blob.filename.extension %>">
   <% if blob.representable? %>
-    <%= image_tag main_app.cdn_image_url(
-      blob.variant(
-        spree_image_variant_options(
-          resize_to_limit: local_assigns[:in_gallery] ? [ 800, 600 ] : [ 1024, 768 ]
-        )
-      )
-    ) %>
+    <%= spree_image_tag(blob, width: local_assigns[:in_gallery] ? 400 : 512, height: local_assigns[:in_gallery] ? 300 : 400) %>
   <% end %>
 
   <figcaption class="attachment__caption">
