--- a/storefront/app/views/themes/default/spree/page_sections/_image_with_text.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_image_with_text.html.erb
@@ -5,12 +5,12 @@
         <div class="lg:col-span-6 aspect-[6/7] <%= 'lg:col-start-7 lg:order-1' if section.preferred_desktop_image_alignment == 'right' %> image-with-text--image-wrapper">
           <%= page_builder_link_to(section.link, title: section.link&.label,  target: (section.link&.open_in_new_tab ? '_blank' : nil)) do %>
             <% if section.image.present? %>
-              <%= image_tag main_app.cdn_image_url(section.image.variant(spree_image_variant_options(resize_to_fill: [2000, nil]))),
+              <%= image_tag spree_image_url(section.image, width: 1000, height: nil),
                 class: "w-full h-full object-cover",
                 loading: :lazy,
                 sizes: "(max-width: 1024px) 100vw, 50vw",
                 srcset: [640, 750, 828, 1080, 1200, 2000].map { |width|
-                  "#{main_app.cdn_image_url(section.image.variant(spree_image_variant_options(resize_to_fill: [width, nil])))} #{width}w"
+                  "#{spree_image_url(section.image, width: width / 2, height: nil)} #{width}w"
                 }.join(', ')
               %>
             <% else %>
