--- a/storefront/app/views/themes/default/spree/page_sections/_taxon_banner.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_taxon_banner.html.erb
@@ -7,12 +7,18 @@
       <div class="lg:gap-6 lg:grid lg:grid-cols-12">
         <% if taxon.image.present? %>
           <div class="flex lg:col-span-7 lg:col-start-6 lg:order-1 lg:items-center lg:justify-end">
-            <% aspect_ratio_style = "aspect-ratio: #{as_aspect_ratio(taxon.image)};" %>
-            <%= image_tag main_app.cdn_image_url(taxon.image.variant(spree_image_variant_options(resize_to_limit: [720, 720]))), alt: taxon.name, class: 'w-full lg:max-h-[280px] h-full lg:w-auto mb-6', style: aspect_ratio_style, loading: :lazy %>
+            <% aspect_ratio_style = "aspect-ratio: #{spree_asset_aspect_ratio(taxon.image)};" %>
+            <%= spree_image_tag(taxon.image, width: 500, height: 280, alt: taxon.name, class: 'w-full lg:h-[280px] h-full lg:w-auto mb-6', style: aspect_ratio_style, loading: :lazy) %>
           </div>
         <% end %>
         <div class="lg:col-span-5 flex flex-col justify-center items-start gap-1">
-          <div class="text-xs lg:text-sm tracking-widest" style="<%= section_heading_styles(section) %>"><%= taxon.taxonomy.name.singularize %></div>
+          <div class="text-xs lg:text-sm tracking-widest" style="<%= section_heading_styles(section) %>">
+            <% if taxon.root? || taxon.parent.root? %>
+              <%= taxon.taxonomy.name.singularize %>
+            <% else%>
+              <%= link_to taxon.parent.name, spree.nested_taxons_path(taxon.parent) %>
+            <% end %>
+          </div>
           <h1 class="self-stretch text-2xl lg:text-3xl font-medium" style="<%= section_heading_styles(section) %>"><%= taxon.name %></h1>
           <% description_text = taxon.description.to_plain_text %>
           <div
