--- a/storefront/app/views/themes/default/spree/products/_featured_image.html.erb
+++ b/storefront/app/views/themes/default/spree/products/_featured_image.html.erb
@@ -12,24 +12,16 @@
       <% object_class = 'object-contain object-top' %>
     <% end %>
 
-    <% image_variant_options = spree_image_variant_options(resize_and_pad: [width * 2, height * 2, { alpha: true }]) %>
-
     <% image_hover_class = object.secondary_image.present? && object.secondary_image.attached? ? 
          "w-full group-hover:opacity-0 transition-opacity duration-500 z-10 relative h-full bg-background product-card !max-h-full #{object_class}" :
          "w-full h-full !max-h-full #{object_class}" %>
 
-    <%= image_tag main_app.cdn_image_url(object.default_image.variant(image_variant_options)),
-          loading: :lazy,
-          alt: object.default_image.alt,
-          class: image_hover_class %>
+    <%= spree_image_tag(object.default_image, width: width, height: height, loading: :lazy, alt: object.default_image.alt, class: image_hover_class) %>
 
     <% if object.secondary_image.present? && object.secondary_image.attached? %>
       <% secondary_image_class = "w-full absolute top-0 left-0 opacity-100 h-full !max-h-full #{object_class}" %>
 
-      <%= image_tag main_app.cdn_image_url(object.secondary_image.variant(image_variant_options)),
-            loading: :lazy,
-            alt: object.secondary_image.alt,
-            class: secondary_image_class %>
+      <%= spree_image_tag(object.secondary_image, width: width, height: height, loading: :lazy, alt: object.secondary_image.alt, class: secondary_image_class) %>
     <% end %>
   </figure>
 <% else %>
