--- a/storefront/app/views/themes/default/spree/shared/_logo.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_logo.html.erb
@@ -5,7 +5,7 @@
 <%= link_to spree.root_path, id: 'site-logo' do %>
   <span class='sr-only'><%= current_store.name %></span>
   <% if logo.present? && logo.attached? && logo.variable? %>
-    <% aspect_ratio = as_aspect_ratio(logo) %>
+    <% aspect_ratio = spree_asset_aspect_ratio(logo) %>
     <% logo_style = "aspect-ratio: #{aspect_ratio};" %>
 
     <% if aspect_ratio.to_f > 10 %>
