--- a/storefront/app/views/themes/default/spree/shared/_order_line_item.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_order_line_item.html.erb
@@ -6,11 +6,7 @@
       <% image = line_item.variant.default_image %>
       <% if image.present? && image.attached? && image.variable? %>
         <%= link_to spree_storefront_resource_url(line_item.product, relative: true) do %>
-          <%= image_tag main_app.cdn_image_url(
-            image.variant(spree_image_variant_options(resize_to_fit: [256, 256])),
-          ),
-          width: 128,
-          loaging: :lazy %>
+          <%= spree_image_tag(image, width: 128, height: 128, loading: :lazy) %>
         <% end %>
       <% end %>
     </div>
